--- a/assignment6/Solution.ipynb
+++ b/assignment6/Solution.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -93,41 +93,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model: \"sequential\"\n",
+      "Model: \"sequential_4\"\n",
       "_________________________________________________________________\n",
       "Layer (type)                 Output Shape              Param #   \n",
       "=================================================================\n",
-      "conv2d (Conv2D)              (None, 62, 65, 240)       2400      \n",
+      "conv2d_12 (Conv2D)           (None, 62, 65, 240)       2400      \n",
       "_________________________________________________________________\n",
-      "max_pooling2d (MaxPooling2D) (None, 20, 21, 240)       0         \n",
+      "max_pooling2d_4 (MaxPooling2 (None, 20, 21, 240)       0         \n",
       "_________________________________________________________________\n",
-      "spatial_dropout2d (SpatialDr (None, 20, 21, 240)       0         \n",
+      "spatial_dropout2d_12 (Spatia (None, 20, 21, 240)       0         \n",
       "_________________________________________________________________\n",
-      "average_pooling2d (AveragePo (None, 10, 10, 240)       0         \n",
+      "average_pooling2d_11 (Averag (None, 10, 10, 240)       0         \n",
       "_________________________________________________________________\n",
-      "conv2d_1 (Conv2D)            (None, 10, 10, 120)       259320    \n",
+      "conv2d_13 (Conv2D)           (None, 10, 10, 120)       259320    \n",
       "_________________________________________________________________\n",
-      "spatial_dropout2d_1 (Spatial (None, 10, 10, 120)       0         \n",
+      "spatial_dropout2d_13 (Spatia (None, 10, 10, 120)       0         \n",
       "_________________________________________________________________\n",
-      "average_pooling2d_1 (Average (None, 5, 5, 120)         0         \n",
+      "average_pooling2d_12 (Averag (None, 5, 5, 120)         0         \n",
       "_________________________________________________________________\n",
-      "flatten (Flatten)            (None, 3000)              0         \n",
+      "conv2d_14 (Conv2D)           (None, 5, 5, 64)          69184     \n",
       "_________________________________________________________________\n",
-      "dense (Dense)                (None, 150)               450150    \n",
+      "spatial_dropout2d_14 (Spatia (None, 5, 5, 64)          0         \n",
       "_________________________________________________________________\n",
-      "dropout (Dropout)            (None, 150)               0         \n",
+      "average_pooling2d_13 (Averag (None, 2, 2, 64)          0         \n",
       "_________________________________________________________________\n",
-      "dense_1 (Dense)              (None, 4)                 604       \n",
+      "flatten_4 (Flatten)          (None, 256)               0         \n",
+      "_________________________________________________________________\n",
+      "dense_9 (Dense)              (None, 150)               38550     \n",
+      "_________________________________________________________________\n",
+      "dropout_4 (Dropout)          (None, 150)               0         \n",
+      "_________________________________________________________________\n",
+      "dense_10 (Dense)             (None, 4)                 604       \n",
       "=================================================================\n",
-      "Total params: 712,474\n",
-      "Trainable params: 712,474\n",
+      "Total params: 370,058\n",
+      "Trainable params: 370,058\n",
       "Non-trainable params: 0\n",
       "_________________________________________________________________\n"
      ]
@@ -144,8 +150,9 @@
     "    layers.Conv2D(120, 3, activation='relu', padding='same'),\n",
     "    layers.SpatialDropout2D(.4),\n",
     "    layers.AveragePooling2D(),\n",
-    "    #layers.Conv2D(16, 3, activation='relu', padding='same'),\n",
-    "    #layers.SpatialDropout2D(.4),\n",
+    "    layers.Conv2D(64, 3, activation='relu', padding='same'),\n",
+    "    layers.SpatialDropout2D(.4),\n",
+    "    layers.AveragePooling2D(),\n",
     "    layers.Flatten(),\n",
     "    layers.Dense(units=150, activation='relu'),\n",
     "    layers.Dropout(.4),\n",
@@ -158,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -167,39 +174,27 @@
      "text": [
       "Train on 9441 samples, validate on 3148 samples\n",
       "Epoch 1/100\n",
-      "9441/9441 [==============================] - 674s 71ms/sample - loss: 1.4743 - accuracy: 0.2432 - val_loss: 1.4389 - val_accuracy: 0.2519\n",
+      "9441/9441 [==============================] - 3s 319us/sample - loss: 1.6656 - accuracy: 0.2542 - val_loss: 1.3900 - val_accuracy: 0.2586\n",
       "Epoch 2/100\n",
-      "9441/9441 [==============================] - 3s 295us/sample - loss: 1.3865 - accuracy: 0.2507 - val_loss: 1.4389 - val_accuracy: 0.2522\n",
+      "9441/9441 [==============================] - 3s 293us/sample - loss: 1.5370 - accuracy: 0.2459 - val_loss: 1.6063 - val_accuracy: 0.2544\n",
       "Epoch 3/100\n",
-      "9441/9441 [==============================] - 3s 286us/sample - loss: 1.3865 - accuracy: 0.2455 - val_loss: 1.4393 - val_accuracy: 0.2522\n",
+      "9441/9441 [==============================] - 3s 290us/sample - loss: 1.5164 - accuracy: 0.2560 - val_loss: 1.5796 - val_accuracy: 0.2586\n",
       "Epoch 4/100\n",
-      "9441/9441 [==============================] - 3s 293us/sample - loss: 1.3863 - accuracy: 0.2620 - val_loss: 1.4391 - val_accuracy: 0.2598\n",
+      "9441/9441 [==============================] - 3s 288us/sample - loss: 1.5186 - accuracy: 0.2504 - val_loss: 1.5436 - val_accuracy: 0.2436\n",
       "Epoch 5/100\n",
-      "9441/9441 [==============================] - 3s 288us/sample - loss: 1.3864 - accuracy: 0.2527 - val_loss: 1.4396 - val_accuracy: 0.2579\n",
+      "9441/9441 [==============================] - 3s 285us/sample - loss: 1.5024 - accuracy: 0.2503 - val_loss: 1.5684 - val_accuracy: 0.2430\n",
       "Epoch 6/100\n",
-      "9441/9441 [==============================] - 3s 286us/sample - loss: 1.3864 - accuracy: 0.2512 - val_loss: 1.4400 - val_accuracy: 0.2541\n",
+      "9441/9441 [==============================] - 3s 293us/sample - loss: 1.5149 - accuracy: 0.2447 - val_loss: 1.5799 - val_accuracy: 0.2433\n",
       "Epoch 7/100\n",
-      "9441/9441 [==============================] - 3s 287us/sample - loss: 1.3862 - accuracy: 0.2527 - val_loss: 1.4388 - val_accuracy: 0.2570\n",
+      "9441/9441 [==============================] - 3s 282us/sample - loss: 1.5224 - accuracy: 0.2462 - val_loss: 1.6559 - val_accuracy: 0.2456\n",
       "Epoch 8/100\n",
-      "9441/9441 [==============================] - 3s 287us/sample - loss: 1.3864 - accuracy: 0.2622 - val_loss: 1.4411 - val_accuracy: 0.2538\n",
+      "9441/9441 [==============================] - 3s 289us/sample - loss: 1.5256 - accuracy: 0.2527 - val_loss: 1.5724 - val_accuracy: 0.2516\n",
       "Epoch 9/100\n",
-      "9441/9441 [==============================] - 3s 289us/sample - loss: 1.3866 - accuracy: 0.2506 - val_loss: 1.4427 - val_accuracy: 0.2579\n",
+      "9441/9441 [==============================] - 3s 295us/sample - loss: 1.5515 - accuracy: 0.2453 - val_loss: 1.5960 - val_accuracy: 0.2538\n",
       "Epoch 10/100\n",
-      "9441/9441 [==============================] - 3s 285us/sample - loss: 1.3864 - accuracy: 0.2493 - val_loss: 1.4427 - val_accuracy: 0.2484\n",
+      "9441/9441 [==============================] - 3s 286us/sample - loss: 1.5737 - accuracy: 0.2544 - val_loss: 1.7628 - val_accuracy: 0.2389\n",
       "Epoch 11/100\n",
-      "9441/9441 [==============================] - 3s 291us/sample - loss: 1.3863 - accuracy: 0.2589 - val_loss: 1.4413 - val_accuracy: 0.2538\n",
-      "Epoch 12/100\n",
-      "9441/9441 [==============================] - 3s 288us/sample - loss: 1.3866 - accuracy: 0.2479 - val_loss: 1.4414 - val_accuracy: 0.2544\n",
-      "Epoch 13/100\n",
-      "9441/9441 [==============================] - 3s 292us/sample - loss: 1.3864 - accuracy: 0.2517 - val_loss: 1.4398 - val_accuracy: 0.2560\n",
-      "Epoch 14/100\n",
-      "9441/9441 [==============================] - 3s 284us/sample - loss: 1.3865 - accuracy: 0.2566 - val_loss: 1.4432 - val_accuracy: 0.2494\n",
-      "Epoch 15/100\n",
-      "9441/9441 [==============================] - 3s 299us/sample - loss: 1.3864 - accuracy: 0.2530 - val_loss: 1.4411 - val_accuracy: 0.2522\n",
-      "Epoch 16/100\n",
-      "9441/9441 [==============================] - 3s 323us/sample - loss: 1.3862 - accuracy: 0.2526 - val_loss: 1.4421 - val_accuracy: 0.2500\n",
-      "Epoch 17/100\n",
-      "9441/9441 [==============================] - 3s 367us/sample - loss: 1.3864 - accuracy: 0.2497 - val_loss: 1.4427 - val_accuracy: 0.2538\n"
+      "9441/9441 [==============================] - 3s 288us/sample - loss: 1.5964 - accuracy: 0.2459 - val_loss: 1.6006 - val_accuracy: 0.2452\n"
      ]
     }
    ],
@@ -212,18 +207,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "9441/9441 [==============================] - 1s 109us/sample - loss: 1.4289 - accuracy: 0.2443\n",
-      "3148/3148 [==============================] - 0s 99us/sample - loss: 1.4220 - accuracy: 0.2449\n",
-      "On train data: Loss = 1.4289, accuracy = 0.2443\n",
-      "On test data: Loss = 1.4220, accuracy = 0.2449\n",
-      "Error on test data: 75.51%\n"
+      "9441/9441 [==============================] - 1s 96us/sample - loss: 1.8595 - accuracy: 0.2463\n",
+      "3148/3148 [==============================] - 0s 101us/sample - loss: 1.8423 - accuracy: 0.2535\n",
+      "On train data: Loss = 1.8595, accuracy = 0.2463\n",
+      "On test data: Loss = 1.8423, accuracy = 0.2535\n",
+      "Error on test data: 74.65%\n"
      ]
     }
    ],
@@ -239,7 +234,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "CNN is suitable for this type of problem. TODO add why"
+    "Despite the poor result we still believe CNN is suitable for this type of problem. It can be adapted to various patterns and more complex tasks. The numbers of parameters that can affect the result also proves that."
    ]
   },
   {
@@ -251,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -300,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -367,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -383,7 +378,7 @@
        "Ridge(alpha=53613.36110051616)"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -425,7 +420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -435,10 +430,7 @@
       "R^2 on train data is 0.3162739711287469 and on test data is 0.30584181453612036\n",
       "[[-1.9896817e-03  1.6974082e-04 -3.1041057e-04 ...  2.8298073e-05\n",
       "   7.0328970e-05 -2.3081271e-05]]\n",
-      "0.8835193682117054\n",
-      "[-1.96896    -1.239222   -0.91658115 ...  5.091192    6.12128\n",
-      "  6.3066916 ]\n",
-      "[0 1 2 3]\n"
+      "0.8835193682117054\n"
      ]
     },
     {
@@ -482,7 +474,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "RidgeCV did remarkably better than CNN. Our opinion is that we are more experineced with Ridge by now so that we managed to perfect it better than CNN."
+    "RidgeCV did remarkably better than CNN as we expected. Our opinion is that we are more experineced with Ridge by now so that we managed to perfect it better than CNN. Unlike CNN, Ridge has fewer parameters to work with. That being said, it makes it less adaptable. "
    ]
   }
  ],
